--- a/app/index.html
+++ b/app/index.html
@@ -32,8 +32,10 @@
           <div class="menu__icon-nav">
             <a class="menu__icon-link menu__icon-link--search" style="background-image: url('images/search.svg');"
               href="#">
+              <span class="sr-only">открыть поиск по сайту</span>
             </a>
             <a class="menu__icon-link menu__icon-link--cart" style="background-image: url('images/cart.svg');" href="#">
+              <span class="sr-only">перейти в корзину с покупками</span>
               <span class="menu__icon-num">4</span>
             </a>
           </div>
