--- a/app/index.html
+++ b/app/index.html
@@ -62,8 +62,30 @@
     </div>
   </header>
 
-  <main class="main">\
-    
+  <main class="main">
+
+    <section class="section hero">
+      <div class="container">
+        <div class="hero__inner">
+          <div class="hero__content">
+            <h1 class="sr-only">SmileFood - доставка еды</h1>
+            <h2 class="hero__title">
+              Доставка <span class="hero__subtitle">за 15 минут</span>
+            </h2>
+            <p class="hero__text">
+              Самый быстрый сервис доставки еды в вашем городе. Не уложимся в срок - доставка за наш
+              счёт
+            </p>
+            <div class="hero__buttons">
+              <a class="btn hero__button" href="#">Заказать</a>
+              <a class="btn-more" href="#">Подробнее</a>
+            </div>
+          </div>
+          <img class="hero__img" src="images/hero-img.png" alt="Курьер на скутере">
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <footer class="footer">
